refactor: clean DTO generator warnings, fix resolver import, optimize tests